# gramma

./: .env.example  .gitignore  LICENSE  README.md  README_PT-BR.md  commands.json  commands.py  gramma.py  gramma_starter.bat  gramma_starter_linux.sh  gramma_to_tray_win.vbs  install_linux.sh  install_windows.bat  pyproject.toml  requirements.txt  settings.json
src/: config.py  utils.py
src/core/: clipboard_listener.py  command_processor.py  tray_icon.py
src/data/: __init__.py  data_manager.py
src/gui/: base_page.py  edit_commands_page.py  setup_page.py
src/managers/: instance_manager.py
tests/: conftest.py
tests/data/: test_data_manager.py
